--- a/uflorida2019/presentation_uf_2019.Rmd
+++ b/uflorida2019/presentation_uf_2019.Rmd
@@ -13,6 +13,8 @@ output:
       highlightLines: true
       slideNumberFormat: "%current%/%total%" # 12/42 
       countIncrementalSlides: false
+      ratio: '4:3'
+      # ratio: '16:9'
 ---
 layout: true
 background-image: url(images/USGS_logo.png)
