--- a/proposals/esa2021.md
+++ b/proposals/esa2021.md
@@ -27,3 +27,19 @@ In 400 words or less, please describe how this session involves diverse perspect
 
 ## Broader Benefits Description (Optional)
 In 400 words or less, how does this session benefit broader society (for example through education, public policy, communication/public engagement, application to commercial technology, national security or international cooperation)?
+
+# Judging
+## Scientific strength
+offers significant contributions to ecological understanding.
+presents innovative or interdisciplinary approaches, including novel collaborations or syntheses across subdisciplines of ecology or with other related disciplines.
+has broad enough appeal to generate large audiences (>250 people) at the meeting.
+benefits broader society (for example through education, public policy, communication/public engagement, application to commercial technology, national security or international cooperation).
+## Structure and organization
+is explicitly more integrated than other oral sessions.
+provides strong overall synthesis or overview; they should not be simply a set of related case studies.
+avoids taking a narrow perspective on the symposium topic (organizers carefully avoid the appearance of biases toward their own perspectives).
+builds a well-integrated whole (each talk should have clear relevance to the overall synthesis provided by the symposium).
+## Speakers
+lists 4 confirmed speakers (speakers who have been contacted and have committed to the session).
+includes a specific title for every speaker’s talk.
+involves diverse perspectives and voices as elaborated in ESA’s Diversity Statement.
