--- a/proposals/esa2021.md
+++ b/proposals/esa2021.md
@@ -40,6 +40,6 @@ provides strong overall synthesis or overview; they should not be simply a set o
 avoids taking a narrow perspective on the symposium topic (organizers carefully avoid the appearance of biases toward their own perspectives).
 builds a well-integrated whole (each talk should have clear relevance to the overall synthesis provided by the symposium).
 ## Speakers
-lists 4 confirmed speakers (speakers who have been contacted and have committed to the session).
-includes a specific title for every speaker’s talk.
-involves diverse perspectives and voices as elaborated in ESA’s Diversity Statement.
+name | talk title | contacted_yn | CONFIRMED_yn
+------------|--------------------------|----- | -----
+maybe someone from semantic web wg in CDI or ESIP (FL, DG) | NA | n |  
