--- a/proposals/esa2021.md
+++ b/proposals/esa2021.md
@@ -1,11 +1,7 @@
 # Title something about knowledge management for ecology 
 
-Organizers
 Jessica Burnett 0000-0002-0896-5099
-
-Moderator
-
-Speakers (titles)
+Carl Boettiger orcid
 
 
 ## Session Description
