--- a/proposals/esa2021.md
+++ b/proposals/esa2021.md
@@ -1,6 +1,6 @@
 # Title something about knowledge management for ecology 
 
-Jessica Burnett 0000-0002-0896-5099
+Jessica Burnett 0000-0002-0896-5099  
 Carl Boettiger orcid
 
 
@@ -38,4 +38,4 @@ builds a well-integrated whole (each talk should have clear relevance to the ove
 ## Speakers
 name | talk title | contacted_yn | CONFIRMED_yn
 ------------|--------------------------|----- | -----
-maybe someone from semantic web wg in CDI or ESIP (FL, DG) | NA | n |  
+Abby Benson | bio data standards | y  | y 
